[package]
name = "bulk_regist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version="0.7", features=["with-serde_json-1", "with-chrono-0_4"] }
tokio = { version="1.8", features=["full"] }
serde = "1"
serde_json = "1"
futures = "0.3"
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
config = "0.10"
once_cell = "1.5"
rust_decimal = {version = "1.28.1", features = ["db-tokio-postgres"]}
rust_decimal_macros = "1.28"
