[package]
name = "get_summary"
version = "0.1.0"
authors = ["Ryuta Hayashi <ryuta.hayashi@fujifilm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
anyhow = "1"
tokio = { version = "1.2", features = ["full"] }
base64 = "0.13"
chrono = "0.4"
config = "0.10"
once_cell = "1.5"
#lazy_static = { version = "1.4", features = ["macro"] }
