[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2" # This is pinned primarily for CI stability.
wee_alloc = "0.4"
#ybc = { git = "https://github.com/thedodd/ybc" }
yew = "0.18"
yew-router = "0.15"
anyhow = "1"

[features]
default = []
demo-abc = []
demo-xyz = []
