[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2" # This is pinned primarily for CI stability.
wee_alloc = "0.4"
#ybc = { git = "https://github.com/thedodd/ybc" }
yew = "0.19"
yew-router = "0.16"
gloo = "0.6"
#reqwest = { version = "0.11", features = ["json"] }
reqwasm = "0.4"
yew-components = "0.3"
anyhow = "1"
plotters = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = []
demo-abc = []
demo-xyz = []
