[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["json", "postgres", "runtime-tokio-rustls"] }
anyhow = "1"
